MODREQMED-148 Add tests, remove getFirst